forces fix for guide menu layout issues

--- a/docs/theme/static/styles/_shared_layout.less
+++ b/docs/theme/static/styles/_shared_layout.less
@@ -374,7 +374,7 @@ body:not(.donejs) {
 				padding:0;
 				text-indent: 15px;
 				&:not(.linenums) {
-					margin:5px 0 0 0;
+					margin:5px 0 0 0 !important;
 				}
 				> li > a {
 					font-size: 16px;
@@ -405,7 +405,7 @@ body:not(.donejs) {
 				position: relative;
 				background-color: #3b6b7f;
 				margin-bottom:0;
-				padding: 6px 0;
+				padding: 10px 0;
 				border-top:1px solid #fff;
 				background-image: url("/static/img/icon-plus.svg");
 				background-size: 11px 11px;
@@ -427,7 +427,7 @@ body:not(.donejs) {
 				overflow: hidden;
 				transition: max-height 0.25s ease-out;
 				&:not(.linenums) {
-					margin:0;
+					margin:0 !important;
 				}
 			}
 			> ol > li.active + ol {
